[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,21 @@
 <html>
+    <head>
+        <title>
+            Article one | Roshni Soni
+            </title>
+        </head>
+        <body>
+            <div>
+                <a href="/">Home</a>
+                </div>
+                <hr/>
+                
+                <h3>Article one</h3>
+                
+                <div>
+                    <p>dajagfdfjkcb\svhjsdchj</p>
+                    <p>dajagfdfjkcb\svhjsdchj</p>
+                    <p>dajagfdfjkcb\svhjsdchj</p>
+                    </div>
+            </body>
 </html>
